Experiment with approach to translating fblf to C.

--- a/fblf/makefile
+++ b/fblf/makefile
@@ -1,7 +1,11 @@
 
 .PHONY: all
-all: bits_test
+all: bits_test demo
 	./bits_test
+	./demo
 
 bits_test: bits_test.c bits.c bits.h 
 	gcc -std=c99 -pedantic -Wall -Werror -gdwarf-3 -ggdb -o $@ bits_test.c bits.c
+
+demo: demo.c
+	gcc -std=c99 -pedantic -Wall -Werror -gdwarf-3 -ggdb -o $@ demo.c
