Implement fblf test suite compiler.
We can now compile some fblf tests to C code and (manually compile and) run
them, and they work!

--- a/fblf/makefile
+++ b/fblf/makefile
@@ -1,11 +1,8 @@
 
 .PHONY: all
-all: bits_test demo
-	./bits_test
-	./demo
+all: tests
+	./tests
 
-bits_test: bits_test.c bits.c bits.h 
-	gcc -std=c99 -pedantic -Wall -Werror -gdwarf-3 -ggdb -o $@ bits_test.c bits.c
+tests: tests.c heap.c
+	gcc -std=c99 -pedantic -Wall -Werror -gdwarf-3 -ggdb -o $@ tests.c heap.c
 
-demo: demo.c
-	gcc -std=c99 -pedantic -Wall -Werror -gdwarf-3 -ggdb -o $@ demo.c
