Move top level CMakeLists to top level directory.
In preparation for using CMake to build fble-test tool.

--- a/fble/src/CMakeLists.txt
+++ b/fble/src/CMakeLists.txt
@@ -24,4 +24,4 @@ add_library(fble
   value.c
   vector.c
 )
-target_include_directories(fble PUBLIC "${PROJECT_SOURCE_DIR}/include")
+target_include_directories(fble PUBLIC "${PROJECT_SOURCE_DIR}/fble/include")
