Add fble-profile-test as cmake test.

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -15,3 +15,4 @@ foreach(TOOL ${TOOLS})
   target_link_libraries(${TOOL} PUBLIC fble)
 endforeach()
 
+add_test(fble-profile-test fble-profile-test)
