Add a 'ninja install' target.
Currently it only installs some of the binaries.

--- a/config.tcl.in
+++ b/config.tcl.in
@@ -6,3 +6,5 @@ set ::builddir @builddir@
 # directory that contains the 'configure' script.
 set ::srcdir @srcdir@
 
+# The directory to install binaries to.
+set ::bindir @bindir@
