Add man page for fble-deps.
And install man pages as part of ninja install.

--- a/config.tcl.in
+++ b/config.tcl.in
@@ -14,3 +14,6 @@ set ::libdir @libdir@
 
 # The directory to install binaries to.
 set ::bindir @bindir@
+
+# The directory to install manual pages to.
+set ::mandir @mandir@
