--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -7,7 +7,7 @@ FILE_PATTERNS = *.h *.c
 OPTIMIZE_OUTPUT_FOR_C = YES
 
 QUIET = YES
-WARN_AS_ERROR = NO
+WARN_AS_ERROR = YES
 WARN_NO_PARAMDOC = YES
 PROJECT_NAME = "Fable"
 OUTPUT_DIRECTORY = @builddir@/doxygen
@@ -17,6 +17,7 @@ SORT_MEMBER_DOCS = NO
 # Output things like "fble-value.h" in man pages instead of
 # full paths like "/home/richard/.../fble-value.h".
 FULL_PATH_NAMES = NO
+LAYOUT_FILE = @srcdir@/DoxygenLayout.xml
 
 GENERATE_MAN = YES
 MAN_LINKS = YES
