Use tclsh8.6 instead of tclsh.
Also:
* Update shebang line in configure as recommended on the tcl wiki.
* Fix version info for Expect in the readme.

--- a/build.ninja.in
+++ b/build.ninja.in
@@ -1,6 +1,6 @@
 
 rule build_ninja_full
-  command = tclsh @srcdir@/build.tcl $out
+  command = tclsh8.6 @srcdir@/build.tcl $out
 
 rule build_ninja
   command = cp $in $out
