Be more robust in the face of build.tcl errors.
Output to build.ninja.tmp and only move that to build.ninja at the end
of build.tcl, so we don't end up generating a partial build.ninja file
that requires rerunning configure to fix.

--- a/build.ninja.in
+++ b/build.ninja.in
@@ -1,9 +1,7 @@
 
-rule build_ninja_full
-  command = tclsh8.6 @srcdir@/build.tcl $out
+# This is a minimal ninja file to bootstrap the build.
 
 rule build_ninja
-  command = cp $in $out
+  command = tclsh8.6 @srcdir@/build.tcl $out
 
-build @builddir@/build.ninja: build_ninja @builddir@/build.ninja.full
-build @builddir@/build.ninja.full: build_ninja_full @srcdir@/build.tcl @builddir@/config.tcl
+build @builddir@/build.ninja: build_ninja
