Fix missing dependencies for configure.
Invoke build.tcl from configure so we don't need to have a bootstrap
build.ninja.in. Add proper dependency tracking for the configure build
rule so we automatically invoke configure again if changes.

Hopefully this is all we need for getting the dependencies on configure
right?

--- a/config.tcl.in
+++ b/config.tcl.in
@@ -2,6 +2,9 @@
 # The build directory
 set ::builddir @builddir@
 
+# The prefix option passed to the configure script.
+set ::prefix @prefix@
+
 # The top level directory containing the fble source code. This is the
 # directory that contains the 'configure' script.
 set ::srcdir @srcdir@
