--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,29 @@ jobs:
             gcc gdb diffutils grep groff-base ninja-build \
             libgl-dev libsdl2-dev tcl8.6
 
-      - name: Build
+      - name: Build and Test
         run: |
           mkdir build
           cd build
           ../configure --prefix=${{github.workspace}}/install
           ninja check
           ninja install
+
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v1.0.7
+        with:
+          path: ${{github.workspace}}/build/www/
+
+  deploy:
+    needs: build
+    permissions:
+      pages: write
+      id-token: write
+      environment:
+        name: github-pages
+        url: ${{steps.deployment.outputs.page_url}}
+      runs-on: ubuntu-latest
+      steps:
+        - name: Deploy GitHub Pages site
+          id: deployment
+          uses: actions/deploy-pages@v1.2.3
