--- a/include/Doxyfile.in
+++ b/include/Doxyfile.in
@@ -10,16 +10,21 @@ QUIET = YES
 WARN_AS_ERROR = YES
 WARN_NO_PARAMDOC = YES
 PROJECT_NAME = "Fable"
-OUTPUT_DIRECTORY = @builddir@/doxygen
+OUTPUT_DIRECTORY = @builddir@
 SHOW_INCLUDE_FILES = NO
 SORT_MEMBER_DOCS = NO
 
 # Output things like "fble-value.h" in man pages instead of
 # full paths like "/home/richard/.../fble-value.h".
 FULL_PATH_NAMES = NO
-LAYOUT_FILE = @srcdir@/DoxygenLayout.xml
+LAYOUT_FILE = @srcdir@/include/DoxygenLayout.xml
+
+HTML_OUTPUT = www/include
 
 GENERATE_MAN = YES
+MAN_OUTPUT = include/man
 MAN_LINKS = YES
+
+LATEX_OUTPUT = include/latex
 
 HAVE_DOT = NO
