Fix doxygen warnings in lib/code.h.

--- a/lib/Doxyfile.in
+++ b/lib/Doxyfile.in
@@ -9,7 +9,7 @@ OPTIMIZE_OUTPUT_FOR_C = YES
 QUIET = YES
 WARN_AS_ERROR = NO
 WARN_NO_PARAMDOC = YES
-PROJECT_NAME = "Fable (Internal)"
+PROJECT_NAME = "Fble (Internal)"
 OUTPUT_DIRECTORY = @builddir@
 SHOW_INCLUDE_FILES = NO
 SORT_MEMBER_DOCS = NO
