--- a/include/Doxyfile.in
+++ b/include/Doxyfile.in
@@ -9,7 +9,7 @@ OPTIMIZE_OUTPUT_FOR_C = YES
 QUIET = YES
 WARN_AS_ERROR = YES
 WARN_NO_PARAMDOC = YES
-PROJECT_NAME = "Fable"
+PROJECT_NAME = "Fble"
 OUTPUT_DIRECTORY = @builddir@
 SHOW_INCLUDE_FILES = NO
 SORT_MEMBER_DOCS = NO
