Update doxygen comments in lib/value.c.
Also, include the include/fble header files when generating doxygen for
lib so it knows where to find the documentation for public functions.

--- a/lib/Doxyfile.in
+++ b/lib/Doxyfile.in
@@ -2,7 +2,7 @@
 ALIASES = "sideeffects=@par Side Effects:^^"
 JAVADOC_AUTOBRIEF = YES
 
-INPUT = @srcdir@/lib
+INPUT = @srcdir@/lib @srcdir@/include/fble
 FILE_PATTERNS = *.h *.c
 OPTIMIZE_OUTPUT_FOR_C = YES
 
