Clean up doxygen comments in lib/typecheck.c.
And remove unused 'path' field of Var type.

--- a/lib/Doxyfile.in
+++ b/lib/Doxyfile.in
@@ -6,6 +6,9 @@ INPUT = @srcdir@/lib @srcdir@/include/fble
 FILE_PATTERNS = *.h *.c
 OPTIMIZE_OUTPUT_FOR_C = YES
 
+EXTRACT_PRIVATE = YES
+EXTRACT_STATIC = YES
+
 QUIET = YES
 WARN_AS_ERROR = NO
 WARN_NO_PARAMDOC = YES
