--- a/lib/Doxyfile.in
+++ b/lib/Doxyfile.in
@@ -10,7 +10,7 @@ EXTRACT_PRIVATE = YES
 EXTRACT_STATIC = YES
 
 QUIET = YES
-WARN_AS_ERROR = NO
+WARN_AS_ERROR = YES
 WARN_NO_PARAMDOC = YES
 PROJECT_NAME = "Fble (Internal)"
 OUTPUT_DIRECTORY = @builddir@
