--- a/config.tcl.in
+++ b/config.tcl.in
@@ -20,3 +20,6 @@ set ::bindir @bindir@
 
 # The directory to install manual pages to.
 set ::mandir @mandir@
+
+# The directory to install data to.
+set ::datadir @datadir@
