--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install \
-            doxygen expect binutils bison \
+            expect binutils bison \
             gcc gdb diffutils grep groff-base source-highlight \
             ninja-build libgl-dev libsdl2-dev tcl8.6
 
