Switch to default retention for github pages artifact.
This should cause the website to stay up for 90 days instead of 1 day.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1.0.7
         with:
           path: ${{github.workspace}}/build/www/
+          retention-days: 0
 
   deploy:
     needs: build
