Update github workflow to only run on push to main.
So it isn't run when we create a new release tag.

Also, remove dist build, now that we no longer have a dist target to
build.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,9 @@
 name: build
 run-name: Fble Build
-on: [push]
+on:
+  push:
+    branches: 
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,17 +24,6 @@ jobs:
           mkdir build
           cd build
           ../configure --prefix=${{github.workspace}}/install
-          ninja check
-          ninja install
-
-      - name: Dist Build and Test
-        run: |
-          cd ${{github.workspace}}
-          mkdir dist
-          cd dist
-          tar xf ${{github.workspace}}/build/fble*.tar.gz
-          cd fble*
-          ./configure --prefix=../install
           ninja check
           ninja install
 
