--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,50 @@ name: build
 run-name: Fble Build
 on:
   push:
-    branches: 
+    branches:
       - main
 jobs:
+  build_www:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check Out
+        uses: actions/checkout@v3
+
+      - name: Env Setup
+        run: |
+          sudo apt update
+          sudo apt install \
+            expect binutils bison \
+            gcc gdb diffutils grep groff-base source-highlight \
+            ninja-build libgl-dev libsdl2-dev tcl8.6
+
+      - name: Build WWW
+        run: |
+          mkdir build
+          cd build
+          ../configure --prefix=${{github.workspace}}/install
+          ninja www
+
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v1.0.7
+        with:
+          path: ${{github.workspace}}/build/www/
+          retention-days: 0
+
+  deploy:
+    needs: build_www
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy GitHub Pages site
+        id: deployment
+        uses: actions/deploy-pages@v1.2.3
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -26,23 +67,3 @@ jobs:
           ../configure --prefix=${{github.workspace}}/install
           ninja check
           ninja install
-
-      - name: Upload GitHub Pages artifact
-        uses: actions/upload-pages-artifact@v1.0.7
-        with:
-          path: ${{github.workspace}}/build/www/
-          retention-days: 0
-
-  deploy:
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{steps.deployment.outputs.page_url}}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy GitHub Pages site
-        id: deployment
-        uses: actions/deploy-pages@v1.2.3
