Add msys2-ucrt64 github build. Attempt 2.
Remove install from the build, because the D:... in the path seems to be
messing things up.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,6 +89,5 @@ jobs:
           export MSYS2_ARG_CONV_EXCL='*'
           mkdir build
           cd build
-          ../configure --prefix=${{github.workspace}}/install
+          ../configure
           ninja check
-          ninja install
