Add mingw-w64-ucrt-x86_64-toolchain to msys2 github action.
In an attempt to fix 'connot find -lmingw32'.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,6 +81,7 @@ jobs:
           update: true
           install: >-
             tcl ninja gcc bison groff diffutils
+            mingw-w64-ucrt-x86_64-toolchain
             mingw-w64-ucrt-x86_64-SDL2
             mingw-w64-ucrt-x86_64-mesa
 
