--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Check Out
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Env Setup
         run: |
